# Youtube-Download-Coordinator

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
youtube_download_coordinator/: __init__.py  add_sources.py  config.py  coordinator.py  sheet_client.py  source.py  source_manager.py  task_manager.py  video_task.py
youtube_download_coordinator/utils/: system_utils.py  time_utils.py
